--- a/src/app/principal/principal.component.css
+++ b/src/app/principal/principal.component.css
@@ -69,12 +69,13 @@
   }
   .subpanel-texto img{
     width: 50%;
+    height: auto;
     margin-bottom: 50px;
   }
   .subpanel-texto button{
     font-weight: bold;
     margin-bottom: 50px;
-    width: 120px;
+    width: 160px;
     height: 45px;
     border-radius: 50px;
     border: 0px;
