--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -3,7 +3,7 @@
         <div class="column">
             <h1 style="color:#022454">GRUPO PR<span style="color:#E16120">E</span>CISO</h1>
             <p>Ofrecemos servicios de calidad brindando atención personalizada</p>
-            <button>SOLICITAR COTIZACION</button>
+            <a class="button-cotizacion" href="https://wa.link/j87pss">SOLICITAR COTIZACION</a>
         </div>
         <div class="column border-column">
                 
