--- a/src/app/components/inicio/inicio.component.html
+++ b/src/app/components/inicio/inicio.component.html
@@ -1,4 +1,4 @@
-
+<app-whatsapp></app-whatsapp>
 <app-nav-responsive></app-nav-responsive>
 <main id="inicio">
     <nav>
@@ -37,7 +37,6 @@
 <app-galeria></app-galeria> 
 <app-blog></app-blog>
 <app-footer id="contacto"></app-footer>
-
 
 
 
