--- a/src/app/components/footer/footer.component.css
+++ b/src/app/components/footer/footer.component.css
@@ -1,7 +1,6 @@
 footer {
     background-color: #ffffff; /* Fondo blanco */
     padding: 20px; /* Espaciado interno */
-    font-family: Arial, Helvetica, sans-serif;
 }
 
 .footer-container {
@@ -35,7 +34,7 @@ footer {
 .column h1 {
 }
 
-.column button {
+.column .button-cotizacion {
     background-color: #022454;
     color: white;
     padding: 10px 20px;
@@ -43,6 +42,7 @@ footer {
     border: none;
     cursor: pointer;
     border-radius: 25px;
+    text-decoration: none;
 }
 h1{
     font-weight: bold;
