--- a/src/app/components/subservicios-7/subservicios-7.component.html
+++ b/src/app/components/subservicios-7/subservicios-7.component.html
@@ -1,32 +1,32 @@
 <app-nav-responsive></app-nav-responsive>
 <app-navegacion></app-navegacion>
 <header>
-<h1>OTROS SERVICIOS</h1>
+<h1>SOLUCIONES PARA MOVILIDAD ELÉCTRICA</h1>
 </header>
 <main>
-    <h2 class="titulo-2">En Preciso, brindamos mas servicios</h2>
+    <h2 class="titulo-2">En Preciso, realizamos instalaciones nuevas y solucionamos problemas de la movilidad eléctrica.</h2>
     <div class="container-sub1">
     <ol class="custom-icons">
         <li class="subtitulo">
             <img src="bitmap.svg" alt="">
-            Servicios de protección de energía eléctrica:</li>
-        <p>Realizamos estudios de coordinación de protecciones y pruebas de relé, además de implementar sistemas de protección homopolar contra falla a tierra para salvaguardar sus equipos de sobrecargas.
+            Suministro de equipos:</li>
+        <p>Somos distribuidores de la empresa EVINKA, la primera empresa sudamericana dedicada al desarrollo de soluciones tecnológicas sostenibles en movilidad eléctrica y almacenamiento de energía, con más de 10 años de investigación y desarrollo en la industria.
         </p>
         <li class="subtitulo">
             <img src="bitmap.svg" alt="">
-            Instalación y mantenimiento de grupos electrógenos:</li>
-        <p>Ofrecemos servicios de instalación y mantenimiento preventivo y correctivo de grupos electrógenos, con capacidades de hasta 1,100 KVA, incluyendo arranque manual o automático, así como mantenimiento de tableros de transferencia manual y automática.
+            Instalación de los equipos de carga</li>
+        <p>Estación de carga residencial, comercial y pública de carga rápida
         </p>
         <li class="subtitulo">
             <img src="bitmap.svg" alt="">
-            Gestiones de cambio de tarifa eléctrica:</li>
-        <p>Realizamos estudios basados en el cuadro de carga y consumo del cliente para optimizar su pago ofreciendo la posibilidad de acceder a servicios como clientes libres, lo que le genera al cliente un ahorro de hasta un 18% en promedio, dependiendo de su factor de carga.
+            Pruebas y puesta en marcha</li>
+        <p>Realizamos pruebas de funcionamiento en conjunto con la concesionaria y aseguramos la puesta en marcha de la estación de carga.
         </p>
         <li class="subtitulo">
             <img src="bitmap.svg" alt="">
-            Diseño y construcción de líneas de media tensión:</li>
-        <p>Somos expertos en el diseño y
-            construcción de líneas eléctricas de media tensión y sus infraestructuras asociadas, contribuyendo a la transmisión y distribución eficiente de la energía eléctrica.            
+            Mantenimiento y monitoreo</li>
+        <p>
+            Ofrecemos servicios de mantenimiento y monitoreo continuo para asegurar la estabilidad y continuo funcionamiento de la estación de carga.
         </p>
         <li class="subtitulo">
             <img src="bitmap.svg" alt="">
@@ -55,7 +55,7 @@
             <img src="bitmap.svg" alt="">
             Servicios generales</li>
     </ol>
-    <img class="imgsubservicio" src="/servicios/7.jpg" alt=""></div>
+    <img class="imgsubservicio" src="/servicios/4.jpg" alt=""></div>
     <h2 class="titulo-5">¿Como lo hacemos?</h2>
     <ol class="containersub-2">
         <div class="container-2">
