--- a/src/app/components/subservicios-1/subservicios-1.component.css
+++ b/src/app/components/subservicios-1/subservicios-1.component.css
@@ -132,12 +132,12 @@ h2{
     align-items: center;
     background-color: #AFD0FE;
 }
-.containersub-3 img{
+.containersub-3 .img3{
     width: 50%;
     height:100%;
+    border-radius: 10px;
     box-sizing: border-box;
-    border-radius: 20px;
-    object-fit: cover;
+    object-fit: contain;
 }
 .container-servicios{
     display: flex;
@@ -151,10 +151,8 @@ h2{
 }
 .serviciosprincipales img{
     width: 50px;
-    height:auto;
+    height: 50px;
     margin: 10px;
-    object-fit: contain;
-    border-radius: 20px;
 }
 .container-4{
     display: flex;
