--- a/src/app/components/subservicios-5/subservicios-5.component.css
+++ b/src/app/components/subservicios-5/subservicios-5.component.css
@@ -35,9 +35,6 @@ header h1{
     color: white;
     text-shadow: 1px 1px 1px #000;
 }
-p li{
-    font-size: 20px;
-}
 ol{
     list-style: none;
     margin: 0;
@@ -135,12 +132,12 @@ h2{
     align-items: center;
     background-color: #AFD0FE;
 }
-.containersub-3 img{
+.containersub-3 .img3{
     width: 50%;
     height:100%;
+    border-radius: 10px;
     box-sizing: border-box;
-    border-radius: 20px;
-    object-fit: cover;
+    object-fit: contain;
 }
 .container-servicios{
     display: flex;
@@ -154,10 +151,8 @@ h2{
 }
 .serviciosprincipales img{
     width: 50px;
-    height:auto;
+    height: 50px;
     margin: 10px;
-    object-fit: contain;
-    border-radius: 20px;
 }
 .container-4{
     display: flex;
