--- a/src/app/components/subservicios-8/subservicios-8.component.html
+++ b/src/app/components/subservicios-8/subservicios-8.component.html
@@ -82,24 +82,24 @@
             <div class="container-servicios">
             <div class="serviciosprincipales">
             <li>
-                <img src="/icons/icono_logro.png" alt="">
+                <img src="/icons/ic1.svg" alt="">
                 Sistema de Utilización de Media y Baja Tensión</li>
             <p>Diseñamos y ejecutamos sistemas eléctricos seguros y eficientes para aplicaciones industriales, comerciales y residenciales.</p>
             </div>
             <div class="serviciosprincipales">
             <li>
-                <img src="/icons/icono_serviciov2.png" alt="">
+                <img src="/icons/ic2.svg" alt="">
                 Servicios Eléctricos de Baja Tensión</li>
             <p>Ofrecemos una amplia gama de servicios eléctricos para instalaciones de baja tensión, asegurando la eficiencia y confiabilidad de su sistema eléctrico.</p></div></div>
             <div class="container-servicios">
             <div class="serviciosprincipales">
             <li>
-                <img src="/icons/icono_mantenimiento-removebg-preview.png" alt="">
+                <img src="/icons/ic3.svg" alt="">
                 Mantenimiento de Subestaciones Eléctricas</li>
             <p>Brindamos servicios integrales de mantenimiento para subestaciones eléctricas, garantizando su óptimo funcionamiento y seguridad.</p></div>
             <div class="serviciosprincipales">
             <li>
-                <img src="/icons/icono_diseñov3.png" alt="">
+                <img src="/icons/ic4.svg" alt="">
                 Tendido de Redes</li>
             <p>Planificamos, insta lamos y mantenemos redes eléctricas para una distribución segura y eficiente de la energía eléctrica.</p></div></div>
         </div>
