Implementando el sistema de busqueda

--- a/src/app/components/nosotros/nosotros.component.css
+++ b/src/app/components/nosotros/nosotros.component.css
@@ -63,6 +63,7 @@ swiper-container{
 }
 .parrafos{
     margin-bottom: 30px;
+    text-align: justify;
 }
 .swiper-button-prev{
     position: absolute;
