--- a/src/app/components/subservicios-6/subservicios-6.component.html
+++ b/src/app/components/subservicios-6/subservicios-6.component.html
@@ -118,7 +118,8 @@
     <div class="container-4">
         <h2 class="titulo-4">¿Te gustaría que te brindemos un diagnóstico completo y detallado del servicio de pozo a tierra que necesitas? ¡No dudes en contactarnos!
         </h2>
-        <button>¡No dudes en contactarnos!</button>
+        <button  (click)="irAExterno()">¡No dudes en contactarnos!</button>
     </div>
 </main>
 <app-footer></app-footer>
+<app-whatsapp></app-whatsapp>
