--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -8,7 +8,7 @@
         <div class="column border-column">
                 
             <ul class="lista-style">
-                <details [open]="isDetailsOpen">
+                <details>
                 <summary>INICIO</summary>
                 <li><a href="javascript:void(0)" (click)="scrollToNosotros($event)">Nosotros</a> </li>
                 <li><a href="javascript:void(0)" (click)="scrollToServicio($event)">Servicios</a> </li>
@@ -19,7 +19,7 @@
 
 
             <ul class="lista-style">
-                <details [open]="isDetailsOpen">
+                <details>
                 <summary>¿NECESITAS AYUDA?</summary>
                 <li>Contacto</li>
                 <li>Preguntas frecuentes</li>
@@ -27,7 +27,7 @@
                 </details>            
             </ul>   
             <ul class="lista-style">
-                <details [open]="isDetailsOpen">
+                <details>
                 <summary>PEDIDOS</summary>
                 <li>Visita técnica</li>
                 <li>Mantenimiento</li>
@@ -37,7 +37,7 @@
                 </details>
             </ul>
             <ul class="lista-style">
-                <details [open]="isDetailsOpen">
+                <details>
                 <summary>SERVICIOS</summary>
                 <li>Personalizados</li>
                 <li>Eléctricos</li>
@@ -49,7 +49,7 @@
         </div>
         <div class="column">
             <ul class="lista-style">
-                <details [open]="isDetailsOpen">
+                <details>
                 <summary>BLOG</summary>
                 <li>Noticias</li>
                 <li>Exposiciones</li>
@@ -58,7 +58,7 @@
             </ul>
             
             <ul class="lista-style">
-                <details [open]="isDetailsOpen">
+                <details>
                 <summary>QUIÉNES SOMOS</summary>
                 <li>Empresa</li>
                 <li>GRUPO PRECISO</li>
@@ -68,7 +68,7 @@
                 </details>
             </ul>
             <ul class="lista-style">
-                <details [open]="isDetailsOpen">
+                <details>
                 <summary>CONDICIONES Y AVISO LEGAL</summary>
                 <li>Privacidad y seguridad</li>
                 <li>Cookie Policy</li>
