--- a/src/app/components/subservicios-3/subservicios-3.component.html
+++ b/src/app/components/subservicios-3/subservicios-3.component.html
@@ -80,7 +80,8 @@
     <div class="container-4">
         <h2 class="titulo-4">¿Te gustaría que te brindemos un diagnóstico completo y detallado de los servicios eléctricos de baja tensión que necesitas? ¡No dudes en contactarnos!
         </h2>
-        <button>¡No dudes en contactarnos!</button>
+        <button  (click)="irAExterno()">¡No dudes en contactarnos!</button>
     </div>
 </main>
 <app-footer></app-footer>
+<app-whatsapp></app-whatsapp>
