Terminado el buscador

--- a/src/app/components/inicio/inicio.component.html
+++ b/src/app/components/inicio/inicio.component.html
@@ -6,7 +6,7 @@
             <li class="titulo"> <a class="ulrtitulo"  href=""><img class="imgtitulo" src="titulo.svg" alt=""></a></li>
             <li class="nosotros"><a  href="javascript:void(0)" (click)="scrollToNosotros($event)"> Nosotros</a></li>
             <li class="servicios"> <a href="javascript:void(0)" (click)="scrollToServicio($event)">Servicios</a></li>
-            <li class="buscar"> <input  type="text" placeholder="Buscar"></li>
+            <li class="buscar"><app-buscador></app-buscador></li>
             <li class="contacto"> <a  href="javascript:void(0)" (click)="scrollToContacto($event)">Contacto</a></li>
             <li class="banderaperu"> <a href=""><img class="imgperu"  src="/perubandera.png" alt=""></a></li>
             <li class="eeuubandera"> <a href=""><img class="imgeeuu"  src="/eeuubandera.png" alt=""></a></li>
