--- a/src/app/nav-responsive/nav-responsive.component.html
+++ b/src/app/nav-responsive/nav-responsive.component.html
@@ -17,7 +17,7 @@
             <ul>
                 <li class="nosotros"><a href="javascript:void(0)" (click)="scrollToNosotros($event)" (click)="closeNavbar()"> Nosotros</a></li>
                 <li class="servicios"> <a href="javascript:void(0)" (click)="scrollToServicio($event)" (click)="closeNavbar()">Servicios</a></li>
-                <li class="buscar"> <input  type="text" placeholder="Buscar"></li>
+                <li class="buscar"><app-buscador></app-buscador></li>
                 <li class="contacto"> <a href="javascript:void(0)" (click)="scrollToContacto($event)" (click)="closeNavbar()">Contacto</a></li>
                 <li class="banderaperu"> <a href="" (click)="closeNavbar()"><img class="imgperu"  src="/perubandera.png" alt=""></a></li>
                 <li class="eeuubandera"> <a href="" (click)="closeNavbar()">    <img class="imgeeuu"  src="/eeuubandera.png" alt=""></a></li>
