--- a/src/app/navegacion/navegacion.component.html
+++ b/src/app/navegacion/navegacion.component.html
@@ -4,7 +4,7 @@
             <li class="titulo"> <a  href=""><img class="imgtitulo" src="/titulo.png" alt=""></a></li>
             <li class="nosotros"><a href="inicio#nosotros"> Nosotros</a></li>
             <li class="servicios"> <a href="inicio#servicios">Servicios</a></li>
-            <li class="buscar"> <input  type="text" placeholder="Buscar"></li>
+            <li class="buscar"><app-buscador></app-buscador> </li>
             <li class="contacto"> <a  href="inicio#contacto">Contacto</a></li>
             <li class="banderaperu"> <a href=""><img class="imgperu"  src="/perubandera.png" alt=""></a></li>
             <li class="eeuubandera"> <a href=""><img class="imgeeuu"  src="/eeuubandera.png" alt=""></a></li>
