--- a/src/app/components/subservicios-2/subservicios-2.component.html
+++ b/src/app/components/subservicios-2/subservicios-2.component.html
@@ -5,6 +5,7 @@
 </header>
 <main>
     <h2 class="titulo-2">En Preciso, realizamos instalaciones nuevas y solucionamos problemas de mantenimiento de subestaciones eléctricas.    </h2>
+    <h2 class="titulo-3">SERVICIO MANTENIMIENTO DE SUBESTACIONES ELÉCTRICAS</h2>
     <div class="container-sub1">
     <ol class="custom-icons">
         <li class="subtitulo">
