--- a/src/app/components/subservicios-5/subservicios-5.component.html
+++ b/src/app/components/subservicios-5/subservicios-5.component.html
@@ -5,13 +5,13 @@
 </header>
 <main>
     <h2 class="titulo-2">En Preciso, realizamos mantenimiento de tableros eléctricos.</h2>
+    <h2 class="titulo-3">SERVICIO MANTENIMIENTO DE TABLEROS ELÉCTRICOS </h2>
     <div class="container-sub1">
     <ol class="custom-icons">
         <li class="subtitulo">
             <img src="bitmap.svg" alt="">
             Mantenimiento De Tableros Eléctricos</li>
-        <p>Realizamos el mantenimiento rutinario de los tableros eléctricos como la forma ideal de garantizar el buen funcionamiento de las instalaciones eléctricas. Estos dispositivos son fundamentales para el normal funcionamiento de los fluidos eléctricos en plantas industriales, residenciales, de viviendas y comerciales.
-        </p>
+        <p>Realizamos mantenimiento preventivo de tableros eléctricos para asegurar el funcionamiento óptimo en diversos entornos industriales, residenciales y comerciales. </p>
         <li class="subtitulo">
             <img src="bitmap.svg" alt="">
             Mantenimiento Preventivo de Tableros Eléctricos</li>
@@ -25,14 +25,7 @@
         <li class="subtitulo">
             <img src="bitmap.svg" alt="">
             Inspección De Tableros Eléctricos</li>
-        <p>En nuestro servicio de inspección de tableros eléctricos, llevamos a cabo una evaluación exhaustiva para garantizar su correcto funcionamiento. A continuación, describimos los pasos y entregables incluidos en este servicio:
-            <li> <img src="bitmap.svg" alt="">Visita técnica realizada por nuestros técnicos
-        </li>
-        <li> <img src="bitmap.svg" alt="">Identificación del tipo de tablero a intervenir: generales, distribución o
-            transferencia.
-            </li>
-        <li> <img src="bitmap.svg" alt="">Elaboración de informe técnico del mantenimiento de tableros eléctricos.
-        </li></p>
+        <p>Realizamos inspecciones detalladas de tableros eléctricos para garantizar su funcionamiento correcto. Incluimos visita técnica, identificación del tipo de tablero y elaboración de informe técnico detallado.</p>
     </ol>
     <img class="imgsubservicio" src="/servicios/5.jpg" alt=""></div>
     <h2 class="titulo-5">¿Como lo hacemos?</h2>
