--- a/src/app/components/subservicios-7/subservicios-7.component.html
+++ b/src/app/components/subservicios-7/subservicios-7.component.html
@@ -10,8 +10,7 @@
         <li class="subtitulo">
             <img src="bitmap.svg" alt="">
             Suministro de equipos:</li>
-        <p>Somos distribuidores de la empresa EVINKA, la primera empresa sudamericana dedicada al desarrollo de soluciones tecnológicas sostenibles en movilidad eléctrica y almacenamiento de energía, con más de 10 años de investigación y desarrollo en la industria.
-        </p>
+        <p>Distribuimos soluciones sostenibles de movilidad eléctrica y almacenamiento de energía de EVINKA, líder en Sudamérica con más de 10 años de experiencia en investigación y desarrollo.</p>
         <li class="subtitulo">
             <img src="bitmap.svg" alt="">
             Instalación de los equipos de carga</li>
@@ -28,32 +27,7 @@
         <p>
             Ofrecemos servicios de mantenimiento y monitoreo continuo para asegurar la estabilidad y continuo funcionamiento de la estación de carga.
         </p>
-        <li class="subtitulo">
-            <img src="bitmap.svg" alt="">
-            Instalación de banco de condensadores:</li>
-        <p>Implementamos bancos de condensadores para reducir o eliminar el consumo de energía reactiva, lo que se traduce en un ahorro en la facturación mensual de energía para nuestros clientes.
-        </p>
-        <li class="subtitulo">
-            <img src="bitmap.svg" alt="">
-            Implementación de luminarias LED y sistemas fotovoltáicos.</li>
-        <li class="subtitulo">
-            <img src="bitmap.svg" alt="">
-            Mantenimiento y reparación de motores</li>
-        <li class="subtitulo">
-            <img src="bitmap.svg" alt="">
-            Instalación y mantenimiento de aire acondicionado</li>
-        <li class="subtitulo">
-            <img src="bitmap.svg" alt="">
-            Bombas y electrobombas</li>
-        <li class="subtitulo">
-            <img src="bitmap.svg" alt="">
-            Venta, instalación y configuración de equipos de video vigilancia</li>
-        <li class="subtitulo">
-            <img src="bitmap.svg" alt="">
-            Estudio de calidad de energía eléctrica</li>
-        <li class="subtitulo">
-            <img src="bitmap.svg" alt="">
-            Servicios generales</li>
+        
     </ol>
     <img class="imgsubservicio" src="/servicios/4.jpg" alt=""></div>
     <h2 class="titulo-5">¿Como lo hacemos?</h2>
