--- a/src/app/components/subservicios-1/subservicios-1.component.css
+++ b/src/app/components/subservicios-1/subservicios-1.component.css
@@ -1,6 +1,7 @@
 p, h2 {
     margin: 0;
     padding: 0;
+    
 
 }
 img {
@@ -37,7 +38,7 @@ header h1{
 }
 ol{
     list-style: none;
-    margin: 0;
+    margin-left: 50px;
 }
 li{
     margin-top: 20px;
@@ -60,8 +61,9 @@ li img{
 p{
     padding: 0 50px;
     font-size: 20px;
-    color: #000;
+    color: #18437f;
     text-shadow: 1px 1px 1px #a7a7a7;
+    text-align: justify;
 }
 .titulo-2{
     text-align: center;
@@ -69,7 +71,7 @@ p{
 }
 .titulo-3{
     text-align: center;
-    padding: 50px;
+    padding-top: 30px;
     background-color: #AFD0FE;
 }
 .titulo-4{
@@ -78,7 +80,7 @@ p{
 }
 .titulo-5{
     text-align: center;
-    padding: 50px;
+    margin-top: 30px;
     background-color: #fff;
 }
 .container-sub1{
@@ -89,9 +91,10 @@ p{
     align-items: center;
 }
 .imgsubservicio{
-    width: 50%;
-    height: auto;
-    border-radius: 10px;
+    width: 35%;
+    height: 550px;
+    border-radius: 20px;
+    margin-right: 100px;
     object-fit: cover;
 }
 
@@ -107,7 +110,8 @@ h2{
     display: flex;
     background-color: #fff;
     text-align: center;
-    padding: 100px 0;
+    padding: 25px;
+    margin-left: 30px;
 }
 
 .container-2 img{
@@ -117,13 +121,21 @@ h2{
 }
 .container-2{
     flex: 1;
+    margin-left: 30px;
+    margin-right: 40px;
 }
 .container-2 li{
     color: #18437f;
-    font-weight: bold;
+    font-weight: bold;    
+    text-align: justify;
+    font-size: 18px;
+    font-family: Arial;
+
 }
 .imgnum{
     font-size: 70px;
+    text-align: center;
+    color: #18437f;
 }
 
 .containersub-3{
@@ -133,18 +145,23 @@ h2{
     background-color: #AFD0FE;
 }
 .containersub-3 img{
-    width: 50%;
-    height:100%;
+    width: 30%;
+    height:400px;
     box-sizing: border-box;
     border-radius: 20px;
     object-fit: cover;
+    margin-left: 50px;
 }
 .container-servicios{
-    display: flex;
+    display: flex;    
+    margin-right: 20px;
+    color: #18437f;
 }
 .serviciosprincipales{
     width: 50%;
     box-sizing: border-box;
+    margin-right: 20px;
+   
 }
 .serviciosprincipales li{
     color: #18437f;
@@ -160,8 +177,10 @@ h2{
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: rgb(223, 223, 223);
-    padding: 100px 0;
+    background-color: rgb(223, 223, 223);  
+    font-size: 18px;
+    text-align: justify;
+    padding-bottom: 30px;
 }
 .container-4 button{
     background-color: #18437f;
@@ -204,6 +223,8 @@ h2{
         padding: 0;
     }
     .imgsubservicio{
-        margin: 20px 0;
+        margin: 0px 0;
+        height: auto;
+        width: 60%;
     }
 }
