--- a/src/app/components/subservicios-1/subservicios-1.component.html
+++ b/src/app/components/subservicios-1/subservicios-1.component.html
@@ -5,12 +5,13 @@
 </header>
 <main id="subservicios1">
     <h2 class="titulo-2">En Preciso, realizamos instalaciones nuevas y resolvemos problemas en sistemas de utilización de media y baja tensión.</h2>
+    <h2 class="titulo-3">Sistema de Utilización de Media y Baja Tensión</h2>
     <div class="container-sub1">
     <ol class="custom-icons">
         <li class="subtitulo">
             <img src="bitmap.svg" alt="">
             Diseño del sistema</li>
-        <p>Realizamos el diseño e Ingeniería del Sistema de utilización en Media y baja tensión: solicitamos la factibilidad del suministro y el punto de diseño, elaboración del expediente técnico y la aprobación del concesionario, brindamos el suministro de los equipos y materiales para el sistema de utilización, así como realizamos el montaje del sistema de utilización en media y baja tensión.
+        <p>Diseñamos, ingeniería, suministramos y montamos sistemas de utilización en media y baja tensión, gestionando desde la factibilidad hasta la instalación
         </p>
         <li class="subtitulo">
             <img src="bitmap.svg" alt="">
@@ -68,13 +69,13 @@
             <li>
                 <img src="/icons/icono_serviciov2.png" alt="">
                 Servicios Eléctricos de Baja Tensión</li>
-            <p>Ofrecemos una amplia gama de servicios eléctricos para instalaciones de baja tensión, asegurando la eficiencia y confiabilidad de su sistema eléctrico.</p></div></div>
+            <p>Ofrecemos servicios eléctricos para instalaciones de baja tensión, garantizando eficiencia y fiabilidad en su sistema.</p></div></div>
             <div class="container-servicios">
             <div class="serviciosprincipales">
             <li>
                 <img src="/icons/icono_mantenimiento-removebg-preview.png" alt="">
                 Mantenimiento de Subestaciones Eléctricas</li>
-            <p>Brindamos servicios integrales de mantenimiento para subestaciones eléctricas, garantizando su óptimo funcionamiento y seguridad.</p></div>
+            <p>Garantizamos mantenimiento integral para subestaciones eléctricas, asegurando funcionamiento óptimo y seguridad.</p></div>
             <div class="serviciosprincipales">
             <li>
                 <img src="/icons/icono_diseñov3.png" alt="">
