--- a/src/app/components/subservicios-4/subservicios-4.component.html
+++ b/src/app/components/subservicios-4/subservicios-4.component.html
@@ -10,27 +10,17 @@
         <li class="subtitulo">
             <img src="bitmap.svg" alt="">
             Diseño y planificación</li>
-        <p>Realizamos un estudio exhaustivo del terreno y las necesidades del cliente para diseñar redes eléctricas optimizadas. Solicitud de la factibilidad del suministro y punto de diseño con el concesionario eléctrico
-            Elaboración del expediente técnico de la red primaria para su presentación y aprobación por el concesionario eléctrico            
-        </p>
+        <p>Diseñamos redes eléctricas eficientes, gestionando factibilidad y aprobación con el concesionario eléctrico.</p>
         <li class="subtitulo">
             <img src="bitmap.svg" alt="">
             Suministro de equipos</li>
-        <p>Suministro de equipos y materiales de la Red eléctrica primaría desde el punto de diseño del concesionario hasta el predio (acometida eléctrica)
-            <br>Suministro de equipos y materiales de la Red eléctrica secundaria interna, incluye subestación/es en media tensión
-            <br>Suministro de equipos y materiales para la red secundaria en baja tensión, hasta el murete porta medidor de cada lote/casa
-            <br>Suministro de conductores, postes y luminarias de alumbrado público
-            <br>Suministro de conductores, tomacorrientes y sockets de cada casa            
-        </p>
+        <p>Suministramos equipos y materiales para redes eléctricas primarias y secundarias, incluyendo subestaciones, alumbrado público y conexión eléctrica individual en cada lote/casa.</p>
         <li class="subtitulo">
             <img src="bitmap.svg" alt="">
             Instalación de cables y equipos</li>
-        <p>Instalación de los equipos y materiales de la Red eléctrica primaría desde el punto de diseño del concesionario hasta el predio (acometida eléctrica)
-            <br>Instalación de los equipos y materiales de la Red eléctrica secundaria interna, incluye subestación/es en media tensión
-            <br>Instalación de los equipos y materiales para la red secundaria en baja tensión, hasta el murete porta medidor de cada lote/casa
-            <br>Instalación de conductores, postes y luminarias de alumbrado público
-            <br>Suministro de conductores, tomacorrientes y sockets de cada casa            
-        </p>
+        <p>
+            ChatGPT
+            Realizamos la instalación de redes eléctricas primarias y secundarias, incluyendo subestaciones, alumbrado público y conexión eléctrica individual en cada vivienda. </p>
         <li class="subtitulo">
             <img src="bitmap.svg" alt="">
             Pruebas y puesta en marcha</li>
